fix tile z-index

--- a/kingoftokyo.css
+++ b/kingoftokyo.css
@@ -1255,6 +1255,7 @@
   background-color: #fffc;
   box-shadow: 0px 0px 5px 5px #fffc;
   height: calc(85px * var(--tile-count) - 3px);
+  z-index: 1;
 }
 #table #table-center #full-board #wickedness-board-wrapper #wickedness-board .wickedness-tiles-pile:hover .wickedness-tile, #table #table-center #full-board #wickedness-board-wrapper #wickedness-board .wickedness-tiles-pile:active .wickedness-tile, #table #table-center #full-board #wickedness-board-wrapper #wickedness-board .wickedness-tiles-pile.opened .wickedness-tile {
   left: 0px;
